--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "node-mongodb-crud-app",
+  "name": "nodedemo",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "node server.js",
-    "dve": "nodemon server.js"
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^7.2.2",
+    "mongoose": "^7.2.2"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.22"
   }
 }
